--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
