--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
+    "base-64": "^1.0.0",
     "expo": "~50.0.14",
     "expo-linear-gradient": "~12.7.2",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-splash-screen": "~0.26.5"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
