--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-date-picker": "^5.0.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^4.0.1",
+    "expo-dev-client": "~3.3.11",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
