--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "expo": "~50.0.14",
+    "expo-dev-client": "~3.3.11",
     "expo-linear-gradient": "~12.7.2",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
@@ -24,9 +26,7 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-select-dropdown": "^4.0.1",
-    "expo-dev-client": "~3.3.11",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "react-native-select-dropdown": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
