Add local env lib

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-select-dropdown": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
