--- a/app.json
+++ b/app.json
@@ -25,7 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
-
+    },
+    "plugins" : [
+      ["expo-build-properties",
+      {
+        "android": {
+          "usesCleartextTraffic": true
+        }
+      }]
+    ]
   }
 }
