--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "expo": "~51.0.8",
+    "expo-build-properties": "^0.12.1",
     "expo-dev-client": "~4.0.14",
     "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
