--- a/app.json
+++ b/app.json
@@ -19,20 +19,28 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lynkdoll0122.ComicReaderApp"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/logo.png"
     },
-    "plugins" : [
-      ["expo-build-properties",
-      {
-        "android": {
-          "usesCleartextTraffic": true
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
         }
-      }]
-    ]
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "a6f842e6-ce99-4f57-aee2-d14994807e7b"
+      }
+    }
   }
 }
