--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
+    "eas": "^0.1.0",
     "expo": "~51.0.8",
     "expo-build-properties": "^0.12.1",
     "expo-dev-client": "~4.0.14",
